# product-pulse

./: .env.example  Makefile  README.md  pyproject.toml
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/chat/: page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: theme-provider.tsx
frontend/components/ai-elements/: message.tsx  prompt-input.tsx
frontend/components/chat/: chatbot-interface.tsx  product-card.tsx  product-grid.tsx
frontend/hooks/: use-agent-stream.ts
frontend/types/: index.ts
src/: decorators.py  server.py
src/agent/: __init__.py  prompts.py  state.py
src/agent/tools/: query_refiner.py  search_on_amazon.py
src/api/core/: models.py
src/api/middleware/: bearer_auth_middleware.py
src/api/services/: agent_service.py  stream_generator.py
src/core/: config.py
src/core/models/: amazon_product_details.py  amazon_search_result.py
src/services/: scraperapi_service.py
tests/agent/tools/: test_query_refiner.py
