[project]
name = "product-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx[http2]>=0.28.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.7",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
